# DSCI-524-Group12

./: .gitignore  CONTRIBUTING.rst  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
datascience_eda/: datascience_eda.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: datascience_eda.rst  modules.rst
tests/: eda_playground.ipynb  test_datascience_eda.py
tests/data/: movies.csv
