[tool.poetry]
name = "datascience_eda"
version = "0.1.0"
description = "This package includes functions helping with common tasks during EDA stage of a data science project."
authors = ["Mai Le, Aditya Bhatraju,, Rahul Kuriyedath, Charles Suresh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
sklearn = "^0.0"
yellowbrick = "^1.3.post1"
spacy = "^3.0.3"
nltk = {git = "https://github.com/nltk/nltk.git", rev = "3.5"}
seaborn = "^0.11.1"
ipython = "^7.21.0"
textblob = "^0.15.3"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0/en_core_web_md-3.0.0.tar.gz"}
pytest = "^6.2.2"
wordcloud = "^1.8.1"
jupyter = "^1.0.0"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
